--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@ table {
     margin-left: auto;
     margin-right: auto;
     background-color: #eee;
-} 
+}
+
+.div2 {
+    text-align: center;
+}
+
 .linenumber { background-color: rgb(0,100,200); }
 .lineindex_color { color: rgb(255,255,255); background-color: #000000; }
 .linetype { color: rgb(100,0,255); background-color: rgb(25,255,100); }
